--- a/contact.html
+++ b/contact.html
@@ -62,18 +62,18 @@
    <div class="row" style="padding-top:50px;">
 
       <div class="col-md-8 mb-5">
-        <h2>Barn Manager: Kristina Griffin</h2>
+        <h2>Barn Manger/Riding Instructor: Kristina Griffin </h2>
         <hr>
-          <p>Kristina is in school for equine science at Rowan college, along with being certified in equine management! Kristina has 20+ years of experience in the equine industry between riding, teaching, selling, training and more. Kristina rides English and Western, she specializes in hunter jumpers and retraining off the track thoroughbreds. </p>
+          <p>Meet Kristina, With a certification in equine management and over two decades of experience in the horse industry, Kristina's got all the horsepower you need! She's ridden in all the styles- English and Western- but her expertise is in hunter jumpers and retraining off the track thoroughbreds. Plus, she's got an exceptional background in customer service, making her equine skills all the more charming. So, let Kristina take the reins and gallop you into the wild and beautiful world of horses!</p>
           
         <p>Visit Kristina on Facebook at <a href="https://www.facebook.com/Stony-Brook-Farm-1693939340916129/" target="_blank">Stony Brook Farm</a>, or stop by the barn for questions on boarding and lessons. </p>
           
         <div class="row">
             <div class="col-sm-6 serviceImg serviceImgL">
-                <img class="img-fluid rounded" src="img/bio/1.jpg" alt="">
+                <img class="img-fluid rounded" src="img/bio/2024/barn%20manager.jpg" alt="">
             </div>
             <div class="col-sm-6 serviceImg serviceImgR">
-                <img class="img-fluid rounded" src="img/bio/2.jpg" alt="">
+                <img class="img-fluid rounded" src="img/bio/2024/Barn%20Manger3.jpg" alt="">
             </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2023</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2024</p>
     </div>
     <!-- /.container -->
   </footer>
