--- a/events.html
+++ b/events.html
@@ -69,14 +69,14 @@
       </div>
       <div class="col-lg-6">
         <div class="">
-            <img class="img-fluid rounded" src="img/party/party1.jpeg" alt="">
+            <img class="img-fluid rounded" src="img/party/2024/pony%20party%20.jpg" alt="">
         </div>
         <div class="row">
             <div class="col-sm-6 serviceImg serviceImgL">
-                <img class="img-fluid rounded" src="img/party/party2.jpeg" alt="">
+                <img class="img-fluid rounded" src="img/party/2024/pony%20party.jpg" alt="">
             </div>
             <div class="col-sm-6 serviceImg serviceImgR">
-                <img class="img-fluid rounded" src="img/party/party3.jpeg" alt="">
+                <img class="img-fluid rounded" src="img/party/2024/pony%20partyy.jpg" alt="">
             </div>
         </div>
           
@@ -89,8 +89,8 @@
     <!-- Content Row -->
     <div class="row" >
       <div class="col-lg-12" id="Boarding">
-        <h2>Summer Pony Camp 2023</h2>
-        <p>Stony Brook Stables will be offering summer camp! More details coming soon.
+        <h2>Summer Pony Camp 2024</h2>
+        <p style="margin-bottom:50px;">More information coming soon.
         <!--<br>
         <br>
         <b>Week 1:</b>  June 27th  --  July 1st
@@ -111,6 +111,7 @@
     </div>
     <!-- /.row -->
     <!-- Content Row -->
+    <!--
     <div class="row" style="padding-top:50px;padding-bottom:50px;">
       <div class="col-lg-6">
         <div class="">
@@ -141,6 +142,7 @@
           
       </div>
     </div>
+    -->
     <!-- /.row -->
 
   </div>
@@ -149,7 +151,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2023</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2024</p>
     </div>
     <!-- /.container -->
   </footer>
