--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
-            <h2 class="card-title">Pony Summer Camp 2023</h2>
-            <p class="card-text">Stony Brook Farm will be offering summer camp 2023. More details to be announced later!</p>
+            <h2 class="card-title">Pony Summer Camp 2024</h2>
+            <p class="card-text">More information coming soon.</p>
           </div>
           <div class="card-footer">
             <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
@@ -161,7 +161,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2023</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2024</p>
     </div>
     <!-- /.container -->
   </footer>
