--- a/sale.html
+++ b/sale.html
@@ -56,19 +56,36 @@
 
   <!-- Page Content -->
   <div class="container">
+    
+      <div style="margin-top:50px;">
+          <h3>What does leasing a horse mean?</h3>
+          <p>When you are leasing a horse, you are paying a set fee
+                for the ability and privilege of additional riding time on
+                that particular horse. In many ways, leasing a horse is
+                similar to owning a horse, with fewer financial
+                responsibilities. For many equestrians and horse
+                Lovers, leasing a horse is a great step towards
+                eventual horse ownership and learning everything that
+              goes into caring for horses. </p>
+
+          <p>Half lease: $335.00 per month </p>
+
+          <p>Full lease: $560.00 per month </p>
+
+        <p>Show lease: $675.00 per month</p>
+      </div>
+      <hr>
 
     <!-- Content Row -->
     <div class="row" style="padding-top:50px;">
       <div class="col-lg-6" id="Boarding">
-        <h2>For Sale: Biscuit</h2>
+        <h2>For Lease: Sugar</h2>
         <h2><b style="color:green;">AVAILABLE</b></h2>
-        <p>6 year old quarter horse 15.3h gelding red dun.</p>
-          <p>Biscuit is a in your pocket type of gelding who wants to please anyone he is with! Unfortunately biscuit was diagnosed with some navicular changes, with some further research we think its best he finds a low level career or go to a non riding home to live his best life in a pasture. </p>
-          <p>Biscuit is a young green horse who does need more work under saddle but is a complete gentleman on the ground, will stand on crossties, stands for vet/farrier, gets along with any horses you put him with,trailers on and off property, he is also up to date on all shots. Previous xrays will be disclosed to any future buyer. Currently unsound. Asking low three figures. </p>
+        <p>Meet Sugar, our resident equine superstar! She's a 5-year-old thoroughbred,who is 15.2 hands and she's always on her A-game when it comes to taking care of our lesson kids and adult amateurs. Sugar's got some serious skills in the manners department, and she loves nothing more than being your trusty sidekick on those long trail rides. She's versatile, too, and can switch between English and Western riding styles like a pro. Ideally, we're looking for an intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor will be right there with you to guide you both along the way!</p>
       </div>
       <div class="col-lg-6">
         <div class="row">
-            <img class="img-fluid rounded" src="img/sale/biscuit.jpeg" alt="">
+            <img class="img-fluid rounded" src="img/sale/2024/Sugar.jpg" alt="">
         </div>
       </div>
     </div>
@@ -78,14 +95,29 @@
     <!-- Content Row -->
     <div class="row" style="padding-top:30px;padding-bottom:50px;">
       <div class="col-lg-6" id="Boarding">
-        <h2>For Sale: Oreo</h2>
+        <h2>For Lease: Citation aka CI </h2>
         <h2><b style="color:green;">AVAILABLE</b></h2>
-          <p>Approx 12-13 years old 12.3-13h black and white paint pony gelding. </p>
-          <p>Oreo was previously an Amish cart pony who then came home to us to be in our lesson program! Oreo is up for sale due to no fault of his own. Oreo has been a great pony for us but we think it is best he finds his own person! Oreo has done summer camp, pony parties, lesson programs, trail rides around our property, jumpers and more he is worth his weight in gold. He will stand for the vet/farrier, stand on crossties, will jump anything you point him over, has good ground manners, great around kids. Asking mid four figures </p>
+          <p>Meet Citation, our magnificent 9-year-old thoroughbred who is 16.2 hands. He’s a shining star in our lesson program, taking good care of beginners and pros alike! Citation is a social butterfly, always snuggling up to his buddies. But, when it's time to work, he puts his nose to the grindstone and goes the extra mile for his rider! Whether you prefer Western or English, Citation is your perfect partner, especially for beginners. But don't count him out if you're an advanced rider looking for a thrilling ride! Get ready for an unforgettable experience with Citation!</p>
       </div>
       <div class="col-lg-6">
         <div class="row">
-            <img class="img-fluid rounded" src="img/sale/oreo.jpg" alt="">
+            <img class="img-fluid rounded" src="img/sale/2024/citation.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+    <hr>
+      
+    <!-- Content Row -->
+    <div class="row" style="padding-top:30px;padding-bottom:50px;">
+      <div class="col-lg-6" id="Boarding">
+        <h2>For Lease: Dixie </h2>
+        <h2><b style="color:green;">AVAILABLE</b></h2>
+          <p>Meet Dixie, the 8-year-old thoroughbred with legs for days! This hunter-jumper dynamo stands tall at 15.3 hands and is a one-of-a-kind showstopper, snagging all the ribbons in sight! But don't let her skills intimidate you- Dixie is the ultimate smooth operator, offering a sweet ride that's perfect for riders of all levels. Even if you've never saddled up before, Dixie will make you feel like a pro in no time! </p>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+            <img class="img-fluid rounded" src="img/sale/2024/dixie.jpg" alt="">
         </div>
       </div>
     </div>
@@ -98,7 +130,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2023</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2024</p>
     </div>
     <!-- /.container -->
   </footer>
