--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,7 @@
           <abbr title="Email">E:</abbr>
           <a href="mailto:stonybrookstables.us@gmail.com">stonybrookstables.us@gmail.com</a>
         </address>
+        <a href="https://book.squareup.com/appointments/0vuifyx7kbwc4q/location/L3Z1SEW4BQFZC/services" target='_blank' class="btn btn-success btn-md">Book Lesson Now</a>
       </div>
        
     </div>
