--- a/sale.html
+++ b/sale.html
@@ -68,20 +68,20 @@
                 eventual horse ownership and learning everything that
               goes into caring for horses. </p>
 
-          <p>Half lease: $335.00 per month </p>
+          <p>Half lease: $375.00 per month </p>
 
-          <p>Full lease: $560.00 per month </p>
+          <p>Full lease: $750.00 per month </p>
 
-        <p>Show lease: $675.00 per month</p>
+        <p>Show lease: $850.00 per month</p>
       </div>
       <hr>
 
     <!-- Content Row -->
     <div class="row" style="padding-top:50px;">
       <div class="col-lg-6" id="Boarding">
-        <h2>For Lease: Sugar</h2>
+        <h2>For Sale: Sugar</h2>
         <h2><b style="color:green;">AVAILABLE</b></h2>
-        <p>Meet Sugar, our resident equine superstar! She's a 5-year-old thoroughbred,who is 15.2 hands and she's always on her A-game when it comes to taking care of our lesson kids and adult amateurs. Sugar's got some serious skills in the manners department, and she loves nothing more than being your trusty sidekick on those long trail rides. She's versatile, too, and can switch between English and Western riding styles like a pro. Ideally, we're looking for an intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor will be right there with you to guide you both along the way!</p>
+        <p>Meet Sugar, our resident equine superstar! She's a 5-year-old thoroughbred,who is 15.2 hands and she's always on her A-game when it comes to taking care of our lesson kids and adult amateurs. Sugar's got some serious skills in the manners department, and she loves nothing more than being your trusty sidekick on those long trail rides. She's versatile, too, and can switch between English and Western riding styles like a pro. Ideally, we're looking for an intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor will be right there with you to guide you both along the way!<p>For sale for $7,000</p></p>
       </div>
       <div class="col-lg-6">
         <div class="row">
@@ -111,13 +111,28 @@
     <!-- Content Row -->
     <div class="row" style="padding-top:30px;padding-bottom:50px;">
       <div class="col-lg-6" id="Boarding">
-        <h2>For Lease: Dixie </h2>
+        <h2>For Lease: Cannoli  </h2>
         <h2><b style="color:green;">AVAILABLE</b></h2>
-          <p>Meet Dixie, the 8-year-old thoroughbred with legs for days! This hunter-jumper dynamo stands tall at 15.3 hands and is a one-of-a-kind showstopper, snagging all the ribbons in sight! But don't let her skills intimidate you- Dixie is the ultimate smooth operator, offering a sweet ride that's perfect for riders of all levels. Even if you've never saddled up before, Dixie will make you feel like a pro in no time! </p>
+          <p>Meet cannoli! One of our farm mascots! Cannoli is 4 years old and is broke to ride but not drive. He is a kids pony deluxe! He loves to be groomed, he loves to do pony rides, and he loves to do liberty if you’re looking for a best friend cannoli is your pony to lease!</p>
       </div>
       <div class="col-lg-6">
         <div class="row">
-            <img class="img-fluid rounded" src="img/sale/2024/dixie.jpg" alt="">
+            <img class="img-fluid rounded" src="img/sale/2024/cannoli.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+      
+    <!-- Content Row -->
+    <div class="row" style="padding-top:30px;padding-bottom:50px;">
+      <div class="col-lg-6" id="Boarding">
+        <h2>For Lease: Dorado  </h2>
+        <h2><b style="color:green;">AVAILABLE</b></h2>
+          <p>Meet Dorado, our resident SUPERSTAR. Are you looking to have a relaxing ride? Are you looking to have a partner you can trust anywhere you go at anytime? Are you looking for a riding partner that is confident? Dorado is your horse to lease! Dorado is a great equine partner who you can trust in the ring and out on the trails, he is an old soul but still has some pep in his step where you can just get on and let dorado lead the way. A child, older adult, a baby can ride dorado with no problem. Dorado will take care of anyone on the ground and on the saddle.</p>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+            <img class="img-fluid rounded" src="img/sale/2024/dorado.jpg" alt="">
         </div>
       </div>
     </div>
