indoor plus new gallery

--- a/gallery.html
+++ b/gallery.html
@@ -58,8 +58,8 @@
 
   <!-- Page Content -->
   <div class="container">
-      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-      <div class="elfsight-app-2b403723-a842-4c0d-9dcb-2475347d14f2"></div>
+      <script src="https://static.elfsight.com/platform/platform.js" async></script>
+      <div class="elfsight-app-2b403723-a842-4c0d-9dcb-2475347d14f2" data-elfsight-app-lazy></div>
 
   </div>
   <!-- /.container -->
