--- a/services.html
+++ b/services.html
@@ -66,6 +66,7 @@
             <li>19 stall barn</li>
             <li>Direct access to 1,600 + acres of well maintained trails</li>
             <li>Two Outdoor Arenas</li>
+            <li>New Indoor Arena</li>
             <li>Ample turn outs rubber coated wire and wood fencing</li>
             <li>Access to Run-Ins in all turn outs</li>
             <li>and more!</li>
