--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
     <!-- Call to Action Well -->
     <div class="card text-white bg-success my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">Now accepting new stall and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
+        <p class="text-white m-0">Now accepting new stall, retirement and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
       </div>
     </div>
 
-<!--
+
     <div class="card text-white bg-info my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">Registration for Summer Pony Camp 2022 is now open! Please <a href="events.html#Camp" class="stretched-link" id="homeLink">click here</a> for more details.</p>
+        <p class="text-white m-0">Lesson Gift Cards are avalible this holiday season! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details.</p>
       </div>
     </div>
--->
+
     <!-- Content Row -->
     <div class="row">
 
