add indoor info

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="card text-white bg-info my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">Lesson Gift Cards are avalible this holiday season! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details.</p>
+        <p class="text-white m-0">Lesson Gift Cards are avalible! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details.</p>
       </div>
     </div>
 
