--- a/services.html
+++ b/services.html
@@ -88,10 +88,10 @@
         </div>
         <div class="row">
             <div class="col-sm-6 serviceImg serviceImgL">
-                <img class="img-fluid rounded" src="img/boarding/2024/boarding%20.jpg" alt="">
+                <img class="img-fluid rounded" src="img/boarding/2024/indoor1.jpeg" alt="">
             </div>
             <div class="col-sm-6 serviceImg serviceImgR">
-                <img class="img-fluid rounded" src="img/boarding/2024/boarding5.jpg" alt="">
+                <img class="img-fluid rounded" src="img/boarding/2024/indoor2.jpeg" alt="">
             </div>
         </div>
           
