--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Pony Summer Camp 2025</h2>
-            <p class="card-text">More information coming soon.</p>
+            <p class="card-text">Beginner through Experienced Riding Levels. Children will enjoy riding lessons, horse safety and care instruction, arts and crafts.</p>
           </div>
           <div class="card-footer">
             <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
@@ -163,7 +163,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2024</p>
+      <p class="m-0 text-center text-white">Stony Brook Farms and Stables, LLC.  &copy; 2025</p>
     </div>
     <!-- /.container -->
   </footer>
