update for camp cta 2025

--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
     <!-- /.row -->
 
     <!-- Call to Action Well -->
+    <div class="card text-white bg-warning my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-dark m-0">2025 Summer Camp now open for enrollment! Spots Limited! Please contact us to <a href="events.html#Camp" class="stretched-link text-dark" id="homeLink">learn more</a> and to reserve a place.</p>
+      </div>
+    </div>
+      
     <div class="card text-white bg-success my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-white m-0">Now accepting new stall, retirement and field boarders! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details or to arrange a farm visit.</p>
-      </div>
-    </div>
-
-
-    <div class="card text-white bg-info my-5 py-4 text-center">
-      <div class="card-body">
-        <p class="text-white m-0">Lesson Gift Cards are avalible! Please <a href="contact.html" class="stretched-link" id="homeLink">contact us</a> for more details.</p>
       </div>
     </div>
 
