--- a/sale.html
+++ b/sale.html
@@ -32,9 +32,11 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
+<!--
           <li class="nav-item">
             <a class="nav-link" href="events.html">Events</a>
           </li>
+-->
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -68,20 +70,19 @@
                 eventual horse ownership and learning everything that
               goes into caring for horses. </p>
 
-          <p>Half lease: $515.00 per month </p>
+          <p>Half lease: $450.00 per month </p>
 
           <p>Full lease: $750.00 per month </p>
 
-        <p>Show lease: $850.00 per month</p>
       </div>
       <hr>
 
     <!-- Content Row -->
     <div class="row" style="padding-top:50px;">
       <div class="col-lg-6" id="Boarding">
-        <h2>For Sale: Sugar</h2>
+        <h2>For Lease: Sugar</h2>
         <h2><b style="color:green;">AVAILABLE</b></h2>
-        <p>Meet Sugar, our resident equine superstar! She's a 5-year-old thoroughbred,who is 15.2 hands and she's always on her A-game when it comes to taking care of our lesson kids and adult amateurs. Sugar's got some serious skills in the manners department, and she loves nothing more than being your trusty sidekick on those long trail rides. She's versatile, too, and can switch between English and Western riding styles like a pro. Ideally, we're looking for an intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor will be right there with you to guide you both along the way!<p>For sale for $7,000</p></p>
+        <p>Meet Sugar, our resident equine superstar! She's a 5-year-old thoroughbred,who is 15.2 hands and she's always on her A-game when it comes to taking care of our lesson kids and adult amateurs. Sugar's got some serious skills in the manners department, and she loves nothing more than being your trusty sidekick on those long trail rides. She's versatile, too, and can switch between English and Western riding styles like a pro. Ideally, we're looking for an intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor will be right there with you to guide you both along the way!</p>
       </div>
       <div class="col-lg-6">
         <div class="row">
