--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,11 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
+<!--
           <li class="nav-item">
             <a class="nav-link" href="events.html">Events</a>
           </li>
+-->
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -94,7 +96,7 @@
           <abbr title="Email">E:</abbr>
           <a href="mailto:stonybrookstables.us@gmail.com">stonybrookstables.us@gmail.com</a>
         </address>
-        <a href="https://book.squareup.com/appointments/0vuifyx7kbwc4q/location/L3Z1SEW4BQFZC/services" target='_blank' class="btn btn-success btn-md">Book Lesson Now</a>
+<!--        <a href="https://book.squareup.com/appointments/0vuifyx7kbwc4q/location/L3Z1SEW4BQFZC/services" target='_blank' class="btn btn-success btn-md">Book Lesson Now</a>-->
       </div>
        
     </div>
