--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
+<!--
           <li class="nav-item">
             <a class="nav-link" href="events.html">Events</a>
           </li>
+-->
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li>
@@ -73,11 +75,13 @@
     <!-- /.row -->
 
     <!-- Call to Action Well -->
+<!--
     <div class="card text-white bg-warning my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-dark m-0">2025 Summer Camp now open for enrollment! Spots Limited! Please contact us to <a href="events.html#Camp" class="stretched-link text-dark" id="homeLink">learn more</a> and to reserve a place.</p>
       </div>
     </div>
+-->
       
     <div class="card text-white bg-success my-5 py-4 text-center">
       <div class="card-body">
@@ -127,6 +131,7 @@
       <!-- /.col-md-4 -->
         
     <!-- /.col-md-4 -->
+        <!--
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
@@ -137,10 +142,10 @@
             <a href="events.html" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- /.col-md-4 -->
 
-        <div class="col-md-4 mb-5">
+        <!-- <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Pony Summer Camp 2025</h2>
@@ -150,7 +155,7 @@
             <a href="events.html#Camp" class="btn btn-success btn-sm">Learn More</a>
           </div>
         </div>
-      </div>
+      </div>-->
 
 
     </div>
