--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 <p>Stony Brook Stables offers English or Western riding lessons to beginner through intermediate riders. Lessons available for adults and children. Enrolled riders benefit from a hands on approach and will learn to groom and tack their own horse as well as various aspects of horsemanship on the ground; including topics such as wrapping legs, equine nutrition, and first aid care. Our quiet, well schooled lesson horses are patient teachers and suit a variety of riders.</p>
                 <p style="margin-top: 1rem;">Stony Brook Stables instructors strive to create riders who are strong and secure in the saddle and able to communicate clearly and concisely with their horse with soft, effective aids. The quiet atmosphere of the barn and friendly instructors will make you or your child feel welcome and comfortable to grow as a horse person and most importantly - enjoy it! Beginner to Intermediate Adult lessons offered.</p>
                 <div class="service-images">
-                    <div class="service-image"><img src="img/lesson/2025/1.JPG"></div>
+                    <div class="service-image"><img src="img/lesson/2025/4.jpeg"></div>
                     <div class="service-image"><img src="img/lesson/2025/2.JPG"></div>
                     <div class="service-image"><img src="img/lesson/2025/3.jpeg"></div>
                 </div>
