--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1G10ZMR7T"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-C1G10ZMR7T');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stony Brook Stables | Princeton, NJ</title>
@@ -652,7 +662,7 @@
             </div>
 
             <div class="horses-grid">
-                <div class="horse-card">
+                <!-- <div class="horse-card">
                     <div class="horse-image"><img src="img/sale/2024/Sugar.jpg"></div>
                     <div class="horse-info">
                         <h3>Sugar</h3>
@@ -664,7 +674,7 @@
                             intermediate to advanced rider to lease Sugar, but don't worry if you're a beginner. Our awesome riding instructor 
                             will be right there with you to guide you both along the way!</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="horse-card">
                     <div class="horse-image"><img src="img/sale/2024/citation.jpg"></div>
@@ -679,7 +689,7 @@
                     </div>
                 </div>
 
-                <div class="horse-card">
+                <!-- <div class="horse-card">
                     <div class="horse-image"><img src="img/sale/2024/cannoli.jpg"></div>
                     <div class="horse-info">
                         <h3>Cannoli</h3>
@@ -688,7 +698,7 @@
                             to be groomed, he loves to do pony rides, and he loves to do liberty if you’re looking for a best friend cannoli 
                             is your pony to lease!</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="horse-card">
                     <div class="horse-image"><img src="img/sale/2024/dorado.jpg"></div>
